angular2 dependencies extended project structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=example-layout
 
 # context + port of the application
-server.context-path=/example
+server.context-path=
 server.port=8080
 
 # context of the management endpoints like metrics, health, and so on
