--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile("de.otto.edison:edison-guava:0.72.0")
     compile("de.otto.edison:edison-status:0.72.0")
     compile("org.testng:testng:6.9.10")
+    compile('io.springfox:springfox-swagger2:2.2.2')
+    compile('io.springfox:springfox-swagger-ui:2.2.2')
 }
 
 artifacts {
