changes context path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # name of the application
-spring.application.name=example-layout
+spring.application.name=AIM-Backend
 
 # context + port of the application
-server.context-path=
+server.context-path=/api
 server.port=8080
 
 # context of the management endpoints like metrics, health, and so on
