--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,14 @@ dependencies {
     compile("de.otto.edison:edison-core:0.77.0")
     compile("de.otto.edison:edison-cache:0.77.0")
     compile("de.otto.edison:edison-status:0.77.0")
+    compile("org.springframework.data:spring-data-mongodb:1.9.4.RELEASE")
+    compile("org.springframework.data:spring-data-rest-core:2.5.4.RELEASE")
     compile("org.testng:testng:6.9.13.6")
     compile('io.springfox:springfox-swagger2:2.6.0')
     compile('io.springfox:springfox-swagger-ui:2.6.0')
+    compile("com.fasterxml.jackson.core:jackson-core:2.6.4")
+    compile("com.fasterxml.jackson.core:jackson-annotations:2.6.4")
+    compile("com.fasterxml.jackson.core:jackson-databind:2.6.4")
 }
 
 artifacts {
