--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 # name of the application
 spring.application.name=AIM-Backend
 
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.logging=console
+
 # context + port of the application
 server.context-path=/api
 server.port=8080
