--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
-vendorinfo.shortdescription.maxlength = 30
-vendorinfo.featuretable.maxentries = 20
-vendorinfo.filegallery.maxentries = 30
-uploadcenter.acceptedfiletypes = pdf, jpeg, gif, png
+vendorinfo.shortdescription.maxlength=30
+vendorinfo.featuretable.maxentries=20
+vendorinfo.filegallery.maxentries=30
+uploadcenter.pictures.filetypes=jpeg,gif,png
+uploadcenter.pdf.filetypes=pdf
