--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-vendorinfo.shortdescription.maxlength = 30
-vendorinfo.featuretable.maxentries = 20
-vendorinfo.filegallery.maxentries = 30
+info.featuretable.maxentries = 20
+info.filegallery.maxentries = 30
+info.shortdescription.maxlength = 30
 uploadcenter.acceptedfiletypes = pdf, jpeg, gif, png
