--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 info.shortdescription.maxlength=30
 info.featuretable.maxentries=20
 info.filegallery.maxentries=30
-uploadcenter.pictures.filetypes=jpeg,gif,png
+uploadcenter.pictures.filetypes=jpeg,gif,png,jpg
 uploadcenter.pdf.filetypes=pdf
