uploading into configurable folder

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,3 +3,4 @@ info.featuretable.maxentries=20
 info.filegallery.maxentries=30
 uploadcenter.pictures.filetypes=jpeg,gif,png,jpg
 uploadcenter.pdf.filetypes=pdf
+uploadcenter.fileslocation=src/main/resources/files
