--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "rxjs": "5.0.0-beta.12",
     "zone.js": "~0.6.23",
     "angular2-in-memory-web-api": "0.0.20",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "font-awesome": "4.7.0"
   }
 }
