add more config variables

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,6 @@
+info.shortdescription.maxlength=30
+info.featuretable.maxentries=20
+info.filegallery.maxentries=30
 uploadcenter.pictures.filetypes=jpeg,gif,png,jpg
 uploadcenter.pdf.filetypes=pdf
-uploadcenter.fileslocation=src/test/resources/testFiles
+uploadcenter.fileslocation=src/main/resources/files
