--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     testCompile("de.flapdoodle.embed:de.flapdoodle.embed.mongo:1.50.5")
     testCompile("org.springframework.boot:spring-boot-test:1.4.1.RELEASE")
     testCompile("org.springframework:spring-test:4.3.3.RELEASE")
+    testCompile("io.rest-assured:rest-assured:3.0.1")
 }
 
 artifacts {
