--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,15 @@ server.context-path=/api
 info.shortdescription.maxlength=30
 info.featuretable.maxentries=20
 info.filegallery.maxentries=30
+info.longdescription.maxlength=30
 uploadcenter.pictures.filetypes=jpeg,gif,png,jpg
 uploadcenter.pdf.filetypes=pdf
 uploadcenter.fileslocation=src/test/resources/testFiles
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=0
+spring.data.mongodb.logging=console
+# Jackson configuration for JSON serialization
+spring.jackson.serialization.INDENT_OUTPUT=true
+# Without timezone (time will be rendered in GMT)
+#spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
+spring.jackson.date-format=yyyy-MM-dd'T'hh:mm:ss.sssZ
