testng is a test dependency

--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,12 @@ dependencies {
     compile("de.otto.edison:edison-status:0.79.0")
     compile("org.springframework.data:spring-data-mongodb:1.9.5.RELEASE")
     compile("org.springframework.data:spring-data-rest-core:2.5.5.RELEASE")
-    compile("org.testng:testng:6.9.13.6")
     compile('io.springfox:springfox-swagger2:2.6.1')
     compile('io.springfox:springfox-swagger-ui:2.6.1')
     compile("com.fasterxml.jackson.core:jackson-core:2.6.4")
     compile("com.fasterxml.jackson.core:jackson-annotations:2.6.4")
     compile("com.fasterxml.jackson.core:jackson-databind:2.6.4")
+    testCompile("org.testng:testng:6.9.13.6")
     testCompile("org.springframework:spring-test:4.3.4.RELEASE")
     testCompile("de.flapdoodle.embed:de.flapdoodle.embed.mongo:1.50.5")
     testCompile("org.springframework.boot:spring-boot-test:1.4.2.RELEASE")
