more gradle output

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,12 @@ test {
 
     description "Tell gradle to use TestNG with all groups"
     useTestNG()
+
+    testLogging {
+        events "failed"
+        exceptionFormat "short"
+    }
+
     options {
         useDefaultListeners = true
     }
