--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,10 @@
     "ie-shim": "^0.1.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "~0.6.26"
+    "zone.js": "~0.6.26",
+    "font-awesome": "4.7.0",
+    "ckeditor": "^4.6.0",
+    "ng2-ckeditor": "^1.1.5"
   },
   "devDependencies": {
     "@types/node": "^6.0.48",
