--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,5 +47,9 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "~0.6.23"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/meandor/project-aim.git"
   }
 }
