--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,17 @@
 # name of the application
 spring.application.name=AIM-Backend
-
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.host=10.0.0.4
+spring.data.mongodb.port=31003
 spring.data.mongodb.logging=console
-
 # context + port of the application
 server.context-path=/api
 server.port=8080
-
 # context of the management endpoints like metrics, health, and so on
 management.context-path=/internal
-
 # Jackson configuration for JSON serialization
 spring.jackson.serialization.INDENT_OUTPUT=true
 # Without timezone (time will be rendered in GMT)
 #spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
 spring.jackson.date-format=yyyy-MM-dd'T'hh:mm:ss.sssZ
-
 # disable graceful shutdown
 edison.gracefulshutdown.enabled=false
