--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,26 +13,28 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~2.2.1",
-    "@angular/compiler": "~2.2.1",
-    "@angular/compiler-cli": "~2.2.1",
-    "@angular/core": "~2.2.1",
-    "@angular/forms": "~2.2.1",
-    "@angular/http": "~2.2.1",
-    "@angular/platform-browser": "~2.2.1",
-    "@angular/platform-browser-dynamic": "~2.2.1",
-    "@angular/platform-server": "~2.2.1",
+    "@angular/common": "~2.2.4",
+    "@angular/compiler": "~2.2.4",
+    "@angular/compiler-cli": "~2.2.4",
+    "@angular/core": "~2.2.4",
+    "@angular/forms": "~2.2.4",
+    "@angular/http": "~2.2.4",
+    "@angular/platform-browser": "~2.2.4",
+    "@angular/platform-browser-dynamic": "~2.2.4",
+    "@angular/platform-server": "~2.2.4",
     "@angular/router": "~3.2.1",
-    "@angular/upgrade": "~2.2.1",
+    "@angular/upgrade": "~2.2.4",
+    "@types/node": "^6.0.55",
     "bootstrap": "^3.3.7",
+    "ckeditor": "^4.6.0",
     "core-js": "^2.4.1",
+    "font-awesome": "4.7.0",
     "ie-shim": "^0.1.0",
+    "ng2-bootstrap": "^1.1.16",
+    "ng2-ckeditor": "^1.1.5",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "~0.6.26",
-    "font-awesome": "4.7.0",
-    "ckeditor": "^4.6.0",
-    "ng2-ckeditor": "^1.1.5"
+    "zone.js": "~0.6.26"
   },
   "devDependencies": {
     "@types/node": "^6.0.48",
