--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.springBootVersion = "1.4.0.RELEASE"
-    ext.springVersion = "4.3.2.RELEASE"
+    ext.springVersion = "4.3.4.RELEASE"
 
     repositories {
         maven { url "http://repo.spring.io/libs-snapshot" }
@@ -29,9 +29,9 @@ idea {
 }
 
 dependencies {
-    compile("de.otto.edison:edison-core:0.79.0")
-    compile("de.otto.edison:edison-cache:0.79.0")
-    compile("de.otto.edison:edison-status:0.79.0")
+    compile("de.otto.edison:edison-core:0.81.0")
+    compile("de.otto.edison:edison-cache:0.81.0")
+    compile("de.otto.edison:edison-status:0.81.0")
     compile("org.springframework.data:spring-data-mongodb:1.9.5.RELEASE")
     compile("org.springframework.data:spring-data-rest-core:2.5.5.RELEASE")
     compile('io.springfox:springfox-swagger2:2.6.1')
@@ -40,10 +40,9 @@ dependencies {
     compile("com.fasterxml.jackson.core:jackson-annotations:2.6.4")
     compile("com.fasterxml.jackson.core:jackson-databind:2.6.4")
     compile("org.json:json:20160810")
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
-    testCompile("org.testng:testng:6.9.13.6")
+    compile("commons-io:commons-io:2.5")
     testCompile("org.testng:testng:6.10")
-    testCompile("org.springframework:spring-test:4.3.4.RELEASE")
+    testCompile("org.springframework:spring-test:${springVersion}")
     testCompile("de.flapdoodle.embed:de.flapdoodle.embed.mongo:1.50.5")
     testCompile("org.springframework.boot:spring-boot-test:1.4.2.RELEASE")
     testCompile("io.rest-assured:rest-assured:3.0.1")
@@ -54,8 +53,6 @@ artifacts {
 }
 
 test {
-    systemProperties = System.properties
-
     description "Tell gradle to use TestNG with all groups"
     useTestNG()
     options {
