Changed Dataimporter to import on application start, every 30 minutes and if someone logs in. Added temporary dummy user creation for every new vendor imported.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # name of the application
 spring.application.name=AIM-Backend
-spring.data.mongodb.host=10.0.0.4
-spring.data.mongodb.port=31003
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
 spring.data.mongodb.logging=console
 # context + port of the application
 server.context-path=/api
